Revise weekly report on CVE-2025-37164 details
Updated formatting and content for clarity and emphasis on the importance of vulnerabilities in HPE OneView.

--- a/weekly/2026-01-12.md
+++ b/weekly/2026-01-12.md
@@ -14,14 +14,14 @@ CISA KEV – HPE OneView Unauthenticated Remote Code Execution (CVE-2025-37164)
 **Category:**  
 Edge Device / Infrastructure Management
 
-**Why This Matters (1–2 sentences):**  
+**Why This Matters:**  
 CISA added CVE-2025-37164 affecting HPE OneView to the Known Exploited Vulnerabilities (KEV) catalog, confirming active exploitation in the wild. Because OneView operates with high-privilege control over enterprise infrastructure, unauthenticated RCE at this layer presents a large blast radius and a rapid path to full environment compromise.
 
 ---
 
 ## 2. Incident Decomposition
 
-**Summary (max 3 sentences):**  
+**Summary:**  
 CVE-2025-37164 is an unauthenticated code injection vulnerability in HPE OneView that allows remote attackers to execute arbitrary code. The flaw is actively exploited and requires no prior authentication, making exposed management interfaces especially high risk. Compromise of OneView can enable downstream control of managed compute, storage, and network resources.
 
 **Initial Access:**  
@@ -35,7 +35,7 @@ Loss of integrity and availability of managed infrastructure, potential full env
 
 ---
 
-## 3. MITRE ATT&CK Technique Mapping (Spine Only)
+## 3. MITRE ATT&CK Technique Mapping
 
 *Focus on the core techniques that enabled the incident. Avoid over-mapping.*
 
@@ -69,7 +69,7 @@ Unauthenticated RCE in management planes creates a disproportionate blast radius
 **Verification Method:**  
 Network architecture review and firewall rule validation; access attempts from non-management segments must fail.
 
-### DR-2 (Optional)
+### DR-2
 **The system SHALL:**  
 Generate high-priority alerts on anomalous process execution originating from infrastructure management platforms.
 
@@ -93,7 +93,7 @@ Process execution simulation during tabletop or adversary emulation.
 
 ---
 
-## 7. Leadership Takeaway (One Sentence)
+## 7. Leadership Takeaway
 
 **This week’s most important defensive lesson:**  
 Infrastructure management platforms are high-value attack surfaces and must be treated as mission-critical control planes with strict exposure, patching, and monitoring requirements.
